# tash-shell

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  builtins.cpp  completion.cpp  frecency.cpp  highlight.cpp  history.cpp  install.sh  main.cpp  parser.cpp  process.cpp  prompt.cpp  shell.h  suggest.cpp  tash.1  tash.1.in  theme.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  publish-master.yml  release.yml
Formula/: amish.rb  tash.rb
cmake/: ai_models_embedded.cpp.in  cluster.cmake  features.cmake  fetch_deps.cmake  fuzzer.cmake  plugin_list.cmake  plugins.cmake  sanitizers.cmake  tests.cmake
data/: ai_models.json
data/cluster/stop-hooks/: claude-stop-hook.sh
data/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  nord.toml  tokyo-night.toml
docs/: cluster-demo.md  cluster.md
docs/superpowers/plans/: 2026-04-18-cluster-remote-launcher.md
docs/superpowers/specs/: 2026-04-16-plugin-architecture-design.md  2026-04-18-cluster-remote-launcher-design.md
fuzz/: parser_fuzz.cpp
fuzz/corpus/: .gitignore  glob  heredoc  pipeline  quoted  redirection  subshell  vars
include/tash/: ai.h  builtins.h  core.h  history.h  llm_client.h  plugin.h  repl.h  shell.h  startup.h  ui.h  util.h
include/tash/ai/: ai_abort.h  bootstrap.h  contextual_ai.h  llm_diagnostics.h  llm_registry.h  model_defaults.h
include/tash/cluster/: builtin_dispatch.h  cluster_engine.h  config.h  demo_mode.h  notifier.h  notifier_factory.h  piped_line_source.h  presets.h  real_mode.h  registry.h  slurm_ops.h  slurm_parse.h  ssh_client.h  stream_watcher.h  tmux_compose.h  tmux_ops.h  types.h  watcher.h
include/tash/core/: builtins.h  config_sync.h  executor.h  parser.h  session.h  signals.h  structured_pipe.h
include/tash/plugins/: ai_error_hook_provider.h  alias_suggest_provider.h  cluster_completion_provider.h  cluster_watcher_hook_provider.h  fig_completion_provider.h  fish_completion_provider.h  manpage_completion_provider.h  safety_hook_provider.h  sqlite_history_provider.h  starship_prompt_provider.h  theme_provider.h
include/tash/ui/: block_renderer.h  clipboard.h  fuzzy_finder.h  inline_docs.h  rich_output.h
include/tash/util/: benchmark.h  config_file.h  config_resolver.h  crash_dump.h  cwd.h  fd.h  io.h  limits.h  parse_error.h  quote_state.h  safe_exec.h  safe_tmpdir.h
scripts/: cluster-coverage-gate.sh
src/: main.cpp  repl.cpp  startup.cpp
src/ai/: ai_abort.cpp  ai_bootstrap.cpp  ai_config.cpp  ai_handler.cpp  ai_setup.cpp  context_suggest.cpp  contextual_ai.cpp  gemini_client.cpp  llm_client.cpp  llm_diagnostics.cpp  llm_registry.cpp  model_defaults.cpp  ollama_client.cpp
src/builtins/: bg.cpp  cluster.cpp  config.cpp  env.cpp  history.cpp  meta.cpp  nav.cpp  shell.cpp  trap.cpp  ui.cpp
src/cluster/: builtin_dispatch.cpp  cluster_engine.cpp  config.cpp  demo_mode.cpp  notifier_factory.cpp  piped_line_source.cpp  presets.cpp  real_mode.cpp  registry.cpp  slurm_ops.cpp  slurm_parse.cpp  ssh_client.cpp  stream_watcher.cpp  tmux_compose.cpp  tmux_ops.cpp  watcher.cpp
src/core/: builtins.cpp  config_sync.cpp  executor.cpp  parser.cpp  process.cpp  session.cpp  signals.cpp  structured_pipe.cpp
src/history/: frecency.cpp  history.cpp
src/plugins/: ai_error_hook_provider.cpp  alias_suggest_provider.cpp  cluster_completion_provider.cpp  cluster_watcher_hook_provider.cpp  fig_completion_provider.cpp  fish_completion_provider.cpp  manpage_completion_provider.cpp  plugin_registry.cpp  safety_hook_provider.cpp  sqlite_history_provider.cpp  starship_prompt_provider.cpp  theme_provider.cpp
src/ui/: block_renderer.cpp  clipboard.cpp  completion.cpp  fuzzy_finder.cpp  highlight.cpp  inline_docs.cpp  prompt.cpp  rich_output.cpp  suggest.cpp
src/util/: benchmark.cpp  colors.cpp  colors.h  config_file.cpp  config_resolver.cpp  crash_dump.cpp  cwd.cpp  io.cpp  safe_exec.cpp  safe_tmpdir.cpp  theme.cpp  theme.h
tests/: test_alias.cpp  test_background.cpp  test_basic.cpp  test_cd.cpp  test_comments.cpp  test_env_vars.cpp  test_glob.cpp  test_helpers.h  test_history.cpp  test_integration.cpp  test_modern_ux.cpp  test_operators.cpp  test_redirection.cpp  test_script.cpp  test_tashrc.cpp  test_tokenizer.cpp
tests/integration/: test_ai_integration.cpp  test_alias_suggest.cpp  test_background.cpp  test_basic.cpp  test_benchmark.cpp  test_block_output.cpp  test_builtin_matrix.cpp  test_clipboard.cpp  test_config_override.cpp  test_config_sync.cpp  test_contextual_ai.cpp  test_dir_stack.cpp  test_env_vars.cpp  test_explain.cpp  test_glob.cpp  test_glob_edges.cpp  test_help.cpp  test_heredoc.cpp  test_history.cpp  test_integration.cpp  test_job_control_edges.cpp  test_live_providers.cpp  test_mixed_pipelines.cpp  test_modern_ux.cpp  test_operators.cpp  test_pipeline.cpp  test_pipes.cpp  test_redirection.cpp  test_rich_output.cpp  test_safety.cpp  test_session.cpp  test_sigchld_stress.cpp  test_signal_handling.cpp  test_source.cpp  test_subshell.cpp  test_tashrc.cpp  test_trap.cpp  test_unicode_paths.cpp
tests/unit/: test_ai.cpp  test_ai_error_hook.cpp  test_alias_suggest.cpp  test_block_renderer.cpp  test_builtins_help.cpp  test_clipboard.cpp  test_config_dir_migration.cpp  test_config_file.cpp  test_config_resolver.cpp  test_config_sync.cpp  test_contextual_ai.cpp  test_crash_dump.cpp  test_expansion_caps.cpp  test_fd.cpp  test_fig_completion.cpp  test_fish_completion.cpp  test_fuzzy_finder.cpp  test_heredoc_large.cpp  test_hook_ordering.cpp  test_hooked_capture.cpp  test_inline_docs.cpp  test_io.cpp  test_key_file_perms.cpp  test_llm_diagnostics.cpp  test_manpage_completion.cpp  test_parser_errors.cpp  test_parser_properties.cpp  test_pipeline.cpp  test_plugin_registry.cpp  test_rich_output.cpp  test_safe_exec.cpp  test_safe_tmpdir.cpp  test_safety_hook.cpp  test_session.cpp  test_sqlite_history.cpp  test_sqlite_history_like_escape.cpp  test_starship.cpp  test_startup_benchmark.cpp  test_theme.cpp  test_tokenizer.cpp
(+64 files in other folders)
